# fltkhs-simple

./: Main.hs  fltkhs-simple.cabal  stack.yaml
src/: Fltk.hs
src/Fltk/: Box.hs  Button.hs  Group.hs  Image.hs  Input.hs  Internal.hs  MenuItem.hs  Widget.hs  WidgetBase.hs  Window.hs  WindowBase.hs
src/Fltk/Box/: Internal.hs
src/Fltk/Group/: Internal.hs
src/Fltk/GroupBase/: Internal.hs
src/Fltk/Image/: Internal.hs
src/Fltk/Internal/: Group.hs  Types.hs  Upcast.hs  Widget.hs
src/Fltk/Types/: Internal.hs
src/Fltk/Widget/: Box.hs  Button.hs  Group.hs  Input.hs  Internal.hs
src/Fltk/Widget/Group/: Window.hs
src/Fltk/Widget/Group/Window/: DoubleWindow.hs
src/Fltk/WidgetBase/: Internal.hs
src/Fltk/Window/: Internal.hs
src/Fltk/WindowBase/: Internal.hs
