cabal-version: 2.4

name: fltkhs-simple
version: 0

library
  build-depends:
    base,
    fltkhs == 0.8.0.*,
    StateVar,
    text,

  default-extensions:
    FlexibleContexts
    InstanceSigs
    LambdaCase
    RankNTypes
    TypeApplications
    TypeFamilies

  default-language:
    Haskell2010

  exposed-modules:
    Fltk.Box
    Fltk.Button
    Fltk.Group
    Fltk.Image
    Fltk.Input
    Fltk.Widget
    Fltk.Window

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -fno-warn-name-shadowing
    -fprint-explicit-foralls
    -fprint-unicode-syntax

  hs-source-dirs:
    src

  other-modules:
    Fltk.Internal.Widget
    Fltk.Types.Internal

executable example
  build-depends:
    base,
    fltkhs,
    fltkhs-simple,
    StateVar,

  default-language:
    Haskell2010

  ghc-options:
    -threaded
    -pgml g++
    "-optl-Wl,--allow-multiple-definition"
    "-optl-Wl,--whole-archive"
    "-optl-Wl,-Bstatic"
    "-optl-Wl,-lfltkc"
    "-optl-Wl,-Bdynamic"
    "-optl-Wl,--no-whole-archive"

  main-is:
    Main.hs
